--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "zustand-state-managment",
+  "name": "todo_list",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.0",
-    "zustand": "^4.2.0"
+    "immer": "^9.0.12",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "zustand": "^3.7.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4",
-    "vite": "^4.0.0"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "sass": "^1.50.1",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5"
   }
 }
